# kubernetes-enterprise-patterns

./: AGENTS.md  CLAUDE.md  README.md  index.html  nuke-everything.sh
app_k8_deployment/: README.md  (+1 more)
k8s_mlops/ml-inferencing-fastapi/runtime-image/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run-local-fastapi_1.sh
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/: __init__.py  main.py
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/api/: routes.py
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/core/: logging_config.py  settings.py
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/health/: health_checks.py
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/model_loading/: model_loader.py
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/model_registry/: mlflow_model_resolver.py
k8s_mlops/ml-inferencing-fastapi/runtime-image/app/prediction/: prediction_service.py  schemas.py
k8s_mlops/ml-training/: .env.example  .gitignore  README.md  one_liner_ownership.md  pyproject.toml
k8s_mlops/ml-training/configs/: README.md  local-mlflow.env.example  training_pipeline.yaml
k8s_mlops/ml-training/src/wine_quality_training/data_ingestion/: load_wine_dataset.py
k8s_mlops/ml-training/tests/unit/: test_artifact_versioning.py  test_data_validation.py  test_env_config_settings.py  test_feature_engineering.py  test_mlflow_experiment_manager.py  test_mlflow_trial_tracking_config.py  test_pipeline_run_config_overrides.py
k8s_mlops/ml-training/training-control-plane/: README.md  mlflow-manager-promotion-runbook.md  model-approval-and-serving-handoff-guide.md  start-mlflow-server.sh  start-mlflow-server_1.sh
(+229 files in other folders)
