[project]
name = "wine-quality-inference-api"
version = "0.1.0"
description = "Enterprise-style FastAPI inference runtime for approved MLflow wine quality models"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "mlflow[sklearn]>=2.15.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
